# PaperPicker

./: README.md  config.toml  pyproject.toml
.github/workflows/: tests.yml
src/paper_picker/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
